# cassiopeia

./: .gitignore  .readthedocs.yaml  CONTRIBUTORS.txt  DISCLAIMER.txt  LICENSE.txt  MANIFEST.in  README.md  circle.yml  environment.yml  example_match.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements-base.txt  requirements-rtd.txt  requirements.txt  requirements27.txt  requirements35.txt  requirements36.txt  riot.txt  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
cassiopeia/: BaseRiotAPI.py  __init__.py  baseriotapi.py  cassiopeia.py  data.py  patches.json  patches.py  perks.json  profile_icon_names.json  requests.py  requrements35.txt  riotapi.py
doc/: advanced.rst  basicusage.rst  cassiopeia.core.rst  cassiopeia.dto.rst  cassiopeia.rst  cassiopeia.type.api.rst  cassiopeia.type.core.rst  cassiopeia.type.dto.rst  cassiopeia.type.rst  conf.py  contributing.rst  data.rst  databasing.rst  datapipeline.rst  index.rst  inner_workings.rst  loadpolicy.rst  plugins.rst  ratelimiting.rst  regions.rst  settings.rst  setup.py  setup.rst  typesystem.rst  vs.rst
example/: is_dyrus_in_game.py  lane_and_role_from_match.py  match_collection.py  parse_match_information.py  pull_masters_tier.py
examples/: calculate_average_kda.py  champion.py  champion_id_to_name_mapping.py  champion_mastery.py  championgg.py  championgg_data.py  dtos.py  is_dyrus_in_game.py  item.py  language_strings.py  languages.py  leagues.py  locales.py  map.py  mastery.py  mastery_pages.py  match.py  match_collection.py  match_statistics.py  parse_match_information.py  profile_icons.py  (+12 more)
(+326 files in other folders)
